fix api not returning role field on login
